[BEAM-5735] Contributor guide improvements